Tue Sep  9 00:34:47 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* mvm.c (specific_key): must be initialized.

Tue Sep  9 00:30:28 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (st_init_table_with_size, ADD_DIRECT): fixed typo.

Mon Sep  8 20:10:12 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (power_cache_get_power0): no need to register address.

Mon Sep  8 17:26:51 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* st.c (garbage_collect): checks if memory can be reclaimed.

Mon Sep  8 06:38:22 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_check_trap_pending): fix for MVM.

	* thread.c (rb_queue_empty_p): added.

	* vm_core.h (rb_thread_set_current_raw): fixed typo.

Wed Sep  3 10:17:55 2008  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/mvm.h, include/ruby/ruby.h, main.c: 
	  main.c doesn't need "ruby.h" any more.

	* thread_pthread.c, thread_win32.c (ruby_init_stack):
	  change parameter type "VALUE *" to "void *".

Wed Sep  3 10:04:46 2008  Koichi Sasada  <ko1@atdot.net>

	* mvm.c, eval.c, ruby.c, vm.c, vm_core.h: pass "make test".

Mon Sep  1 11:31:26 2008  Koichi Sasada  <ko1@atdot.net>

	* mvm.c: added.

	* common.mk: ditto.

	* eval.c, eval_intern.h, include/ruby/intern.h, include/ruby/mvm.h,
	  include/ruby/public_object.h, include/ruby/ruby.h, io.c, main.c,
	  main.c, pack.c, ruby.c, thread.c, thread_pthread.c,
	  thread_pthread.h, vm.c, vm_core.h: fix Ruby/MVM API.
	  On this commit, only miniruby is built, but not working.

Sun Aug 31 12:41:09 2008  Koichi Sasada  <ko1@atdot.net>

	* sampledriver/main.c: update.

Sun Aug 31 12:32:41 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (dir_chdir): fixed typo.

Sun Aug 31 00:40:45 2008  Koichi Sasada  <ko1@atdot.net>

	* sampledriver/main.c: added.

Sun Aug 31 00:02:49 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_wrap_cstr): new function.

	* dir.c (ruby_dirfd): returns directory fd.

	* dir.c (chdir_restore): restores thread cwd.
